--- a/content/header.yaml
+++ b/content/header.yaml
@@ -1,4 +1,4 @@
 text: Digital Products, Transformation and Design
-description: Lipsum dipsum dopsum Lipsum dipsum dopsum Lipsum dipsum dopsum Lipsum dipsum dopsum Lipsum dipsum dopsum Lipsum dipsum dopsum
+description: Trusted development using disruptive technologies. We blend the best of the new with many years of experience to help you transform your offering and launch new products.
 button: Learn more
 image: assets/rocket.png
