--- a/content/footer.yaml
+++ b/content/footer.yaml
@@ -1,4 +1,11 @@
+logo: /assets/logo.footer.png
+location: /assets/location-point.svg
+address: 241 Hertingfordbury Road, Hertingfordbury, SG14 2LB
+contactsImage: /assets/contacts.svg
+contacts: 
+- cc@digytle.com
+- t.e.shaw@digytle.com
 privacy: Privacy policy
-contact: Contacts
-social: Social links
-copyright: © 2020 Digytle. All rights reserved
+copyright: © 2020-2021 Digytle. All rights reserved
+twitter: /assets/twitter_image.svg
+linkedin: /assets/linkedin_image.svg
