--- a/content/YearSummarised.yaml
+++ b/content/YearSummarised.yaml
@@ -1,3 +1,5 @@
-title: 2   0   2   0   Summarised
-date: 07.01.2021
-description: How we successfully pivoted during the pandemic  
+title: 2020   Summarised
+description: How we successfully pivoted during the pandemic 
+image: assets/yearSummarised.png 
+link: leadership
+template: person
