--- a/content/footer.yaml
+++ b/content/footer.yaml
@@ -1,4 +1,4 @@
-logo: /assets/logo.footer.png
+logo: /assets/logo.new.png
 location: /assets/location-point.svg
 address: 241 Hertingfordbury Road, Hertingfordbury, SG14 2LB
 contactsImage: /assets/contacts.svg
