--- a/content/navigation.yaml
+++ b/content/navigation.yaml
@@ -1,7 +1,7 @@
 logoBlack: /assets/logo.new.png
 logoWhite: /assets/logo.new.png
 firstComponent: HOME
-secondComponent: GET TO KNOW US
+secondComponent: WHAT WE DO
 thirdComponent: OUR PRODUCTS
 fourthComponent: 2020 SUMMARISED
 fifthComponent: FEATURETTES
