--- a/content/navigation.yaml
+++ b/content/navigation.yaml
@@ -2,6 +2,6 @@ logoBlack: /assets/logo.new.png
 logoWhite: /assets/logo.new.png
 firstComponent: HOME
 secondComponent: WHAT WE DO
-thirdComponent: OUR PRODUCTS
+thirdComponent: LATEST WORK
 fourthComponent: 2020 SUMMARISED
 fifthComponent: FEATURETTES
