--- a/content/featurettes/learn-more.yaml
+++ b/content/featurettes/learn-more.yaml
@@ -23,3 +23,9 @@ sections:
   text: buy now!
   imageAmazon: ../assets/amazon.png
   link: /book/
+work:
+- question: Are you interested in working with us?
+  text: Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam
+  button: Book a consultation
+  link: /
+background: /assets/background_with_us.png
