--- a/content/what-we-do.yaml
+++ b/content/what-we-do.yaml
@@ -1,11 +1,11 @@
-headerFirst: Digital Transformation
+headerFirst: Digital Transformation, Products and Design
 descriptionFirst: Digytle helps you harness and adopt the best technologies to transform your businesse's processes and services. To digitally transform means a paradigm shift, organisational change and market re-positioning. Digytle can help you achieve all three.
 
-headerSecond: Digital Products
+headerSecond: Thought Leadership
 descriptionSecond: Digytle delivers full set of services related to Digital Products including fitness for purpose, competitiveness and robustness.
 
-headerThird: Digital experience and design
+headerThird: Conversational Engines and Chatbots
 descriptionThird: Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo 
 
-headerForth: Testing Automation Platform
+headerForth: Automated Deep Quality And Compliance Monitoring
 descriptionForth: AUXTA performs Deep Automated Quality Assurance of your online or mobile application. It can perform 10s of 1000s of steps every hour, imitating human visitor, and comparing the result fixed or dynamic values. AUXTA performs compliance supervision such as European Securities and Markets Authority (ESMA) monitoring.
