--- a/content/what-we-do.yaml
+++ b/content/what-we-do.yaml
@@ -1,7 +1,7 @@
 headerFirst: Digital Transformation, Products and Design
 descriptionFirst: Digytle helps you harness and adopt the best technologies to transform your businesse's processes and services. To digitally transform means a paradigm shift, organisational change and market re-positioning. Digytle can help you achieve all three.
 
-headerSecond: Thought Leadership
+headerSecond: Pioneering Thinking and Digital Leadership
 descriptionSecond: Digytle delivers full set of services related to Digital Products including fitness for purpose, competitiveness and robustness.
 
 headerThird: Conversational Engines and Chatbots
