--- a/content/what-we-do.yaml
+++ b/content/what-we-do.yaml
@@ -2,10 +2,10 @@ headerFirst: Digital Transformation, Products and Design
 descriptionFirst: Digytle helps you harness and adopt the best technologies to transform your businesse's processes and services. To digitally transform means a paradigm shift, organisational change and market re-positioning. Digytle can help you achieve all three.
 
 headerSecond: Pioneering Thinking and Digital Leadership
-descriptionSecond: Digytle delivers full set of services related to Digital Products including fitness for purpose, competitiveness and robustness.
+descriptionSecond: Digytle's ground breaking talent scouting and talent nusaries using education and mentoring to identify, develope and nurture some of the most talented young minds of their genartion from accross Europe.
 
 headerThird: Conversational Engines and Chatbots
-descriptionThird: Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo 
+descriptionThird: delivers full set of services related to Digital Products including fitness for purpose, competitiveness and robustness.
 
 headerForth: Automated Deep Quality And Compliance Monitoring
 descriptionForth: AUXTA performs Deep Automated Quality Assurance of your online or mobile application. It can perform 10s of 1000s of steps every hour, imitating human visitor, and comparing the result fixed or dynamic values. AUXTA performs compliance supervision such as European Securities and Markets Authority (ESMA) monitoring.
