--- a/content/what-we-do.yaml
+++ b/content/what-we-do.yaml
@@ -2,10 +2,10 @@ headerFirst: Digital Transformation, Products and Design
 descriptionFirst: Digytle helps you harness and adopt the best technologies to transform your businesse's processes and services. To digitally transform means a paradigm shift, organisational change and market re-positioning. Digytle can help you achieve all three.
 
 headerSecond: Pioneering Thinking and Digital Leadership
-descriptionSecond: Digytle's unique and groundbreaking talent scouting methodology and talent nurseries allows us to hire incredible talent. Partnering with top academic institutions we educate and mentor their students to identify, develop and nurture some of the most talented young minds of their generation, from across Europe. Our passion for teaching does not end with our talent and we seek to use this website to help the wider business community through online learning and creating a comprehensive information portal around all things digital.  
+descriptionSecond: Digytle's unique and groundbreaking talent scouting methodology and talent nurseries allows us to hire incredible talent. Partnering with top academic institutions we educate and mentor their students to identify, develop and nurture some of the most talented young minds of their generation, from across Europe. 
 
 headerThird: Conversational Engines and Chatbots
-descriptionThird: delivers full set of services related to Digital Products including fitness for purpose, competitiveness and robustness.
+descriptionThird: Our passion for teaching does not end with our talent and we seek to use this website to help the wider business community through online learning and creating a comprehensive information portal around all things digital.  
 
 headerForth: Automated Deep Quality And Compliance Monitoring
 descriptionForth: AUXTA performs Deep Automated Quality Assurance of your online or mobile application. It can perform 10s of 1000s of steps every hour, imitating human visitor, and comparing the result fixed or dynamic values. AUXTA performs compliance supervision such as European Securities and Markets Authority (ESMA) monitoring.
