--- a/content/what-we-do.yaml
+++ b/content/what-we-do.yaml
@@ -4,8 +4,8 @@ descriptionFirst: Digytle helps you harness and adopt the best technologies to t
 headerSecond: Talent Scouting and Nurseries
 descriptionSecond: Digytle's unique talent scouting methodology and talent nurseries allows us to hire incredible talent. Partnering with top academic institutions we educate and mentor their students to identify, develop and eventually employ some of the most talented minds of their generation, from across Europe.  
 
-headerThird: Pioneering Thinking and Digital Leadership
-descriptionThird: Our passion for teaching does not end with our talent and we seek to help and educate the wider business community through online learning and creating a comprehensive information resource for digital transformation, products and design.  
+headerThird: Conversational Bots And Testing Automationp
+descriptionThird: AUXTA performs Deep Automated Quality Assurance of your online or mobile application. It can perform 10s of 1000s of steps every hour, imitating human visitor, and comparing the result fixed or dynamic values. AUXTA performs compliance supervision such as European Securities and Markets Authority (ESMA) monitoring.
 
-headerForth: Conversational Bots And Testing Automation
-descriptionForth: AUXTA performs Deep Automated Quality Assurance of your online or mobile application. It can perform 10s of 1000s of steps every hour, imitating human visitor, and comparing the result fixed or dynamic values. AUXTA performs compliance supervision such as European Securities and Markets Authority (ESMA) monitoring.
+headerForth: Pioneering Thinking and Digital Leadership
+descriptionForth: Our passion for teaching does not end with our talent and we seek to help and educate the wider business community through online learning and creating a comprehensive information resource for digital transformation, products and design.   
