--- a/content/what-we-do.yaml
+++ b/content/what-we-do.yaml
@@ -4,7 +4,7 @@ descriptionFirst: Digytle helps you harness and adopt the best technologies to t
 headerSecond: Talent Scouting and Nurseries
 descriptionSecond: Digytle's unique talent scouting methodology and talent nurseries allows us to hire incredible talent. Partnering with top academic institutions we educate and mentor their students to identify, develop and eventually employ some of the most talented minds of their generation, from across Europe.  
 
-headerThird: Conversational Bots And Testing Automationp
+headerThird: Conversational Bots And Testing Automation
 descriptionThird: AUXTA performs Deep Automated Quality Assurance of your online or mobile application. It can perform 10s of 1000s of steps every hour, imitating human visitor, and comparing the result fixed or dynamic values. AUXTA performs compliance supervision such as European Securities and Markets Authority (ESMA) monitoring.
 
 headerForth: Pioneering Thinking and Digital Leadership
