--- a/content/what-we-do.yaml
+++ b/content/what-we-do.yaml
@@ -1,11 +1,11 @@
-headerFirst: Digital Transformation, Products and Design
-descriptionFirst: Digytle helps you harness and adopt the best technologies to transform your businesse's processes and services. To digitally transform means a paradigm shift, organisational change and market re-positioning. Digytle can help you achieve all three.
+headerFirst: Talent Scouting and Nurseries
+descriptionFirst:  Digytle's unique talent scouting methodology and talent nurseries allows us to hire incredible talent. Partnering with top academic institutions we educate and mentor their students to identify, develop and eventually employ some of the most talented minds of their generation, from across Europe.
 
-headerSecond: Talent Scouting and Nurseries
-descriptionSecond: Digytle's unique talent scouting methodology and talent nurseries allows us to hire incredible talent. Partnering with top academic institutions we educate and mentor their students to identify, develop and eventually employ some of the most talented minds of their generation, from across Europe.  
+headerSecond: Testing Automation with AUXTA
+descriptionSecond: AUXTA performs Deep Automated Quality Assurance of your online or mobile application. It can perform 10s of 1000s of steps every hour, imitating human visitor, and comparing the result fixed or dynamic values. AUXTA also performs compliance supervision such as European Securities and Markets Authority (ESMA) monitoring.
 
-headerThird: Conversational Bots And Testing Automation
-descriptionThird: AUXTA performs Deep Automated Quality Assurance of your online or mobile application. It can perform 10s of 1000s of steps every hour, imitating human visitor, and comparing the result fixed or dynamic values. AUXTA performs compliance supervision such as European Securities and Markets Authority (ESMA) monitoring.
+headerThird: Conversational, Compliant, No Code Bots 
+descriptionThird: Our sister company Blits can power all your company’s internal and external chatbots and voicebots. Offering a no code drag and drop interface to make creating, comparing and deploying bots across your whole company fast and easy. Compatible with any AI engine, comms channel and connectors to build smart bots that will save your organisation time and resources.
 
 headerForth: Pioneering Thinking and Digital Leadership
 descriptionForth: Our passion for teaching does not end with our talent and we seek to help and educate the wider business community through online learning and creating a comprehensive information resource for digital transformation, products and design.   
